trying input fix on ios 1

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -50,6 +50,7 @@
 .menu-top .two input {
     width: 100%;
     height: 100%;
+    font-size: 16px;
 }
 
 .menu-top .two input::placeholder {
